--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "geektastic/phpmpwgg",
   "description": "A game where multiple players submit words and get points for scoring the correct letters or words",
   "require": {
-    "php": ">=8.1"
+    "php": ">=8.1",
+    "php-di/php-di": "^7.0"
   },
   "autoload": {
     "psr-4": {
